[package]
build = "build.rs"
edition = "2021"
name = "reduced_ordered_binary_decision_diagram"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.lalrpop]
features = ["lexer"]
version = "0.19.8"

[dependencies]
regex = "1"

[dependencies.lalrpop-util]
features = ["lexer"]
version = "0.19.8"
